CB-10242 API changes to support semi-private networks
Adds new optional fields 'publicEndpointAccessGateway' and
'endpointGatewaySubnetIds' to the EnvironmentNetworkV1Request API object. These
fields are persisted to the EnvironmentNetwork and NetworkDto BaseNetwork
objects. Adds new columns for these fields to the environment_network table
and saves them to the database.

Tested with unit tests, and by manually setting the new fields in the IDE and
verifying they were converted/persisted in the database correctly.